Add basic scaffolding to home page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/2a97e054bf.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <div class="header">
     <div class="logo">
-      <a href="index.html"><img src='assets/img/logo.png' png="logo" class="logo" alt="site logo which reads create"/></a>
+      <a href="index.html"><img src='assets/img/logo.png' png="logo" class="logo"
+          alt="site logo which reads create" /></a>
     </div>
   </div>
   <div class="navbar">
@@ -28,25 +30,29 @@
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="ocean.html">Ocean Transport</a></li>
       <li><a href="lastMile.html">Last Mile</a></li>
-      <li><a href="amazon.html">Amazon</a></li>
+      <li><a href="amazon.html">Other Resources</a></li> 
+      <!-- Place to list other items I find during research and explain if time -->
+      <li><a href="amazon.html">About</a></li>
+      <!-- Background on Project - reasoning and my personal background - and Site References (if time should link them to this page) -->
     </ul>
   </div>
+  <div class="cover">
+    <img src='assets/img/spread.png' class="spread" alt="Full width cover image">
+  </div>
   <div class="container">
-    <div class="cover">
-      <img src='assets/img/spread.png' class="spread" alt="Full width cover image">
-    </div>
     <div class="row top">
       <h1> Project Overview</h1>
-      <p> This website is a compilation of my research of the environmental impact of shipping through the lens of consumerism. I looked in three key areas: long transport shipping, last mile delivery, and consumerist culture impacts - mainly Amazon.</p>
-      <p>My goal with this project is to encourage people to analyze the culture we exist in and the society we are continually building. I want people to think critically about how we are affecting the environment with our actions.</p>
-      <h2> Topic Explanation </h2>
-      <p>My first two pages: <a href="ocean.html">Ocean Transport</a> and <a href="lastMile">Last Mile</a> look at two of the biggest components of shipping. The majority of the world's goods are moved by cargo ships. Last mile delivery is one of the most environmentally impactful parts of the shipping process due to the difficulty around optimizing.</p>
-      <p>The final page is about one of the primary inspirations for this project: <a href=amazon.html> Amazon</a>. Amazon has changed so many norms around what our society expects in regards to e-commerce and commerce in general. I have only been alive for 20 years, and yet I have witnessed a massive change in attitudes. I believe it is important to reflect on Amazon and the impact corporations can have on our culture.
+      <p>Brief overview of what this project is:</p>
+      <ol>
+        <li>What is my reason for doing this project? <- this can probably be put on the same page, but put it below in a seperate subheading that way the essential information is first. Any "why" should be limited to 1 sentece (2 max) in this intro.</li>
+        <li>What will I be exploring? <- this is where I will be more clearly defining my scope</li>
+        <li>Who is my target audience and what do I hope they will get out of it?</li>
+        <li>Brief overview of what the project is: what is my reason for doing this project, who is my target audience, </li>
+      </ol>
     </div>
     <div class="row">
-      <h2> Audience </h2>
-      <p> While researching this topic and making this website, I kept in mind one key question: how can people in power use their power to impact corporations and change culture? That is the primary target audience for this project. There is often too much pressure put on individuals to enact system change without power, and I did not want to further enforce that with this project. Systemic changes enacted by people with systemic power often have much more power than individual action from people with lesser power.</p>
-      <p>One group in particular I kept in mind while working on this were my classmates at Olin. In a few years, we will all hold relative positions of power and privilege - how will we use that? The title of the Biology course is "What Engineers need to Know and Why?". I want my project to embody that as much as possible, and give clear examples of why an engineer needs to know and care about biology. How can we, as oliners, use our relative positions of power to push internally for an environmentally conscious approach. Or at least not an environment last approach.</p>
+      <h2>Project Background</h2>
+      <p>More on my reasons for doing the project</p>
     </div>
     <div class="row">
       <div class="footer">
@@ -57,4 +63,5 @@
     </div>
   </div>
 </body>
+
 </html>
