Update navbar  and meta tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/htmla; charset=UTF-8">
-  <title>Shipping Environmental Impact</title>
-  <meta name="keywords" content="biology, shipping, impact, ecoloogical, last-mile, amazon, recycling, carboard">
-  <meta name="description" content="Environmental impact of consumerism created shipping practices.">
-  <meta name="Description" content="Environmental impact of consumerism created shipping practices">
+  <title>Police Data Accessibility, Data Advocacy, & Abolition</title>
+  <meta name="keywords" content="policing, data, prision abolition, data advocacy, data activism, public records requests">
+  <meta name="description" content="Accessibility and limitations of policing data in the US and the implications this has on abolitionist movements.">
   <meta name="author" content="Maeve Stites">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
@@ -28,12 +27,11 @@
   <div class="navbar">
     <ul>
       <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="ocean.html">Ocean Transport</a></li>
-      <li><a href="lastMile.html">Last Mile</a></li>
-      <li><a href="amazon.html">Other Resources</a></li> 
+      <li><a href="ocean.html">Police Data</a></li>
+      <li><a href="lastMile.html">Data Advocacy Projects</a></li>
+      <li><a href="lastMile.html">Data Advocacy & Abolition</a></li>
+      <li><a href="amazon.html">Other Resources</a></li>
       <!-- Place to list other items I find during research and explain if time -->
-      <li><a href="amazon.html">About</a></li>
-      <!-- Background on Project - reasoning and my personal background - and Site References (if time should link them to this page) -->
     </ul>
   </div>
   <div class="cover">
@@ -44,10 +42,13 @@
       <h1> Project Overview</h1>
       <p>Brief overview of what this project is:</p>
       <ol>
-        <li>What is my reason for doing this project? <- this can probably be put on the same page, but put it below in a seperate subheading that way the essential information is first. Any "why" should be limited to 1 sentece (2 max) in this intro.</li>
+        <li>What is my reason for doing this project? <- this can probably be put on the same page, but put it below in
+            a seperate subheading that way the essential information is first. Any "why" should be limited to 1 sentece
+            (2 max) in this intro.</li>
         <li>What will I be exploring? <- this is where I will be more clearly defining my scope</li>
         <li>Who is my target audience and what do I hope they will get out of it?</li>
-        <li>Brief overview of what the project is: what is my reason for doing this project, who is my target audience, </li>
+        <li>Brief overview of what the project is: what is my reason for doing this project, who is my target audience,
+        </li>
       </ol>
     </div>
     <div class="row">
@@ -57,7 +58,8 @@
     <div class="row">
       <div class="footer">
         <ul>
-          <br>
+          <li><a href="about.html">Sources & About</a></li>
+                <!-- Background on Project - reasoning and my personal background - and Site References (if time should link them to this page) -->
         </ul>
       </div>
     </div>
