--- a/404.html
+++ b/404.html
@@ -21,23 +21,32 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="index.html"><img src='assets/img/logo.png' png="logo" class="logo" alt="site logo which reads create"/></a>
+      <a href="index.html"><img src='assets/img/logo.png' png="logo" class="logo"
+          alt="site logo which reads create" /></a>
     </div>
   </div>
   <div class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="ocean.html">Ocean Transport</a></li>
-      <li><a href="lastMile.html">Last Mile</a></li>
-      <li><a href="amazon.html">Amazon</a></li>
+      <li><a href="policeData.html">Police Data</a></li>
+      <li><a href="dataAdvocacy.html">Data Advocacy Projects</a></li>
+      <li><a href="data&abolition.html">Data Advocacy & Abolition</a></li>
+      <li><a href="otherResources.html">Other Resources</a></li>
     </ul>
   </div>
   <div class="container">
     <div class="row p404">
       <h1>404</h1>
-      <p>The page you are looking for cannot be found.<p>
+      <p>The page you are looking for cannot be found.</p>
+    </div>
+    <div class="row">
+      <div class="footer">
+        <ul>
+          <li><a href="about.html">Sources & About</a></li>
+        </ul>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 
-  </html>
+</html>
