Start work on drop down header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/htmla; charset=UTF-8">
   <title>Police Data Accessibility, Data Advocacy, & Abolition</title>
-  <meta name="keywords" content="policing, data, prision abolition, data advocacy, data activism, public records requests">
-  <meta name="description" content="Accessibility and limitations of policing data in the US and the implications this has on abolitionist movements.">
+  <meta name="keywords"
+    content="policing, data, prision abolition, data advocacy, data activism, public records requests">
+  <meta name="description"
+    content="Accessibility and limitations of policing data in the US and the implications this has on abolitionist movements.">
   <meta name="author" content="Maeve Stites">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
@@ -25,14 +27,19 @@
     </div>
   </div>
   <div class="navbar">
-    <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="policeData.html">Police Data</a></li>
-      <li><a href="dataAdvocacy.html">Data Advocacy Projects</a></li>
-      <li><a href="data&abolition.html">Data Advocacy & Abolition</a></li>
-      <li><a href="otherResources.html">Other Resources</a></li>
-      <!-- Place to list other items I find during research and explain if time -->
-    </ul>
+    <a class="active" href="index.html">Home</a>
+    <a href="policeData.html">Police Data</a>
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="dataAdvocacy.html">Data Advocacy Projects</a>
+        <a href="data&abolition.html">Data Advocacy & Abolition</a>
+      </div>
+    </div>
+    <a href="otherResources.html">Other Resources</a>
+    <!-- Place to list other items I find during research and explain if time -->
   </div>
   <div class="cover">
     <img src='assets/img/spread.png' class="spread" alt="Full width cover image">
@@ -49,26 +56,52 @@
         <li>Brief overview of what the project is: what is my reason for doing this project, who is my target audience,
         </li>
       </ol>
-      <p>My goal with this website is to provide visitors with 
-        explain some places where you can get policing data, 
+      <p>My goal with this website is to provide visitors with
+        explain some places where you can get policing data,
       </p>
-      <p>I am going to explain some places where you can get policing data based on research I performed using my background as a data science person who has prior experience working on a project heavily based around the topic of policing data (and going through an active process of trying to get police data).</p>
+      <p>I am going to explain some places where you can get policing data based on research I performed using my
+        background as a data science person who has prior experience working on a project heavily based around the topic
+        of policing data (and going through an active process of trying to get police data).</p>
       <hr>
-      <p>INTRO SENTENCE ABOUT MASS INCARCERATION AND HARMS. With this immense amount of carceral violence, - can also just skip to below. </p>
-      <p>I come from a background heavy in data science. So as I have started learning more about police and prision abolition efforts, I have wondered about the potentials for data advocacy as part of these movements. We come from a society that values "hard data"  and quantifying racial bias in policing or carceral systems has the potential to be a persuasive tool for shedding light on systemic racism and the impacts of the prision industrial complex (many potentials for data, such as reducing incarceration through evidence in court - though this has limiatitions, pushing for abolitionist reforms, growing awareness and participation in abolitionist movements).</p>
-      <p>The crux of much of data advocacy is in the data sources. It is often difficult, or impossible, to find data period. And it is harder still to find data that is of sufficent quality (up to date, not too much missing or inaccurate information, enough data points, etc.) to perform the analysis that you actually want to perform. For this reason, I wanted to investigate the accessibility and quality of policing data for use in data advocacy projects in abolitionist efforts. My goal with this site is to share my learning to hopefully give some perspecitive on:</p>
+      <p>INTRO SENTENCE ABOUT MASS INCARCERATION AND HARMS. With this immense amount of carceral violence, - can also
+        just skip to below. </p>
+      <p>I come from a background heavy in data science. So as I have started learning more about police and prision
+        abolition efforts, I have wondered about the potentials for data advocacy as part of these movements. We come
+        from a society that values "hard data" and quantifying racial bias in policing or carceral systems has the
+        potential to be a persuasive tool for shedding light on systemic racism and the impacts of the prision
+        industrial complex (many potentials for data, such as reducing incarceration through evidence in court - though
+        this has limiatitions, pushing for abolitionist reforms, growing awareness and participation in abolitionist
+        movements).</p>
+      <p>The crux of much of data advocacy is in the data sources. It is often difficult, or impossible, to find data
+        period. And it is harder still to find data that is of sufficent quality (up to date, not too much missing or
+        inaccurate information, enough data points, etc.) to perform the analysis that you actually want to perform. For
+        this reason, I wanted to investigate the accessibility and quality of policing data for use in data advocacy
+        projects in abolitionist efforts. My goal with this site is to share my learning to hopefully give some
+        perspecitive on:</p>
       <ol>
-        <li>Policies regarding the openness of police data to the public, and what this looks like in practice in terms of acquiring data.</li>
-        <li>Some of the limitations of using policing data for data advocacy projects, particularly in an abolitionist context.</li>
-        <li>Examples of data advocacy projects using police data, both abolitionist data projects and also projects that are more reformist (or even less so, more info on PAGE).</li>
-        <li>Introduction to considerations and dialogue around the positioning of data advocacy in respect to police and prision abolition activist movements. What things should we be cautious of when considering data as a potential solution?</li>
+        <li>Policies regarding the openness of police data to the public, and what this looks like in practice in terms
+          of acquiring data.</li>
+        <li>Some of the limitations of using policing data for data advocacy projects, particularly in an abolitionist
+          context.</li>
+        <li>Examples of data advocacy projects using police data, both abolitionist data projects and also projects that
+          are more reformist (or even less so, more info on PAGE).</li>
+        <li>Introduction to considerations and dialogue around the positioning of data advocacy in respect to police and
+          prision abolition activist movements. What things should we be cautious of when considering data as a
+          potential solution?</li>
       </ol>
       <h3>Old</h3>
-      <p>There are questions to as to how, and if at all, that data advocacy plays a role in abolitionist movements. I discuss these in brief on the <a href="data&abolition.html">Data Advocacy & Abolition</a> page. However, to do any sort of data advocacy, there needs to  be data. 
-        
+      <p>There are questions to as to how, and if at all, that data advocacy plays a role in abolitionist movements. I
+        discuss these in brief on the <a href="data&abolition.html">Data Advocacy & Abolition</a> page. However, to do
+        any sort of data advocacy, there needs to be data.
+
         The crux of data advocacy is within the source data itself. You need data to be able to do analysis on. </p>
-      <p>This semester, I got the opportunity to work on a project with the goal of using police citation data to prove, with statistical sigificance, racial bias in police traffic stops in the hopes that our findings can be used in court to throw out evidence on the basis of racial profiling. Here, our goal is to use data advocacy to prove something we already know - that police are racist and that their racist actions lead to the disproportinate targetting, gathering of evidence, and incarceration of low-income people of color.</p>
-      <p>However, unfortunately through the use of data advocacy, there is the potential to reduce incarceration by creating course admissable reports using statistics proving racism </p>
+      <p>This semester, I got the opportunity to work on a project with the goal of using police citation data to prove,
+        with statistical sigificance, racial bias in police traffic stops in the hopes that our findings can be used in
+        court to throw out evidence on the basis of racial profiling. Here, our goal is to use data advocacy to prove
+        something we already know - that police are racist and that their racist actions lead to the disproportinate
+        targetting, gathering of evidence, and incarceration of low-income people of color.</p>
+      <p>However, unfortunately through the use of data advocacy, there is the potential to reduce incarceration by
+        creating course admissable reports using statistics proving racism </p>
     </div>
     <div class="row">
       <h2>Project Background</h2>
@@ -78,7 +111,7 @@
       <div class="footer">
         <ul>
           <li><a href="about.html">Sources & About</a></li>
-                <!-- Background on Project - reasoning and my personal background - and Site References (if time should link them to this page) -->
+          <!-- Background on Project - reasoning and my personal background - and Site References (if time should link them to this page) -->
         </ul>
       </div>
     </div>
