Implement simple dropdown menu, needs full compat

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   <div class="navbar">
     <a class="active" href="index.html">Home</a>
     <a href="policeData.html">Police Data</a>
+    <a href="otherResources.html">Other Resources</a>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown
+      <button class="dropbtn">Data Advocacy
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
@@ -38,7 +39,6 @@
         <a href="data&abolition.html">Data Advocacy & Abolition</a>
       </div>
     </div>
-    <a href="otherResources.html">Other Resources</a>
     <!-- Place to list other items I find during research and explain if time -->
   </div>
   <div class="cover">
