Add dropdown navbar on 404 and police data page

--- a/404.html
+++ b/404.html
@@ -26,13 +26,18 @@
     </div>
   </div>
   <div class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="policeData.html">Police Data</a></li>
-      <li><a href="dataAdvocacy.html">Data Advocacy Projects</a></li>
-      <li><a href="data&abolition.html">Data Advocacy & Abolition</a></li>
-      <li><a href="otherResources.html">Other Resources</a></li>
-    </ul>
+    <a href="index.html">Home</a>
+    <a class="active" href="policeData.html">Police Data</a>
+    <a href="otherResources.html">Other Resources</a>
+    <div class="dropdown">
+      <button class="dropbtn">Data Advocacy
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="dataAdvocacy.html">Data Advocacy Projects</a>
+        <a href="data&abolition.html">Data Advocacy & Abolition</a>
+      </div>
+    </div>
   </div>
   <div class="container">
     <div class="row p404">
