--- a/policeData.html
+++ b/policeData.html
@@ -27,40 +27,61 @@
     </div>
   </div>
   <div class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a class="active" href="policeData.html">Police Data</a></li>
-      <li><a href="dataAdvocacy.html">Data Advocacy Projects</a></li>
-      <li><a href="data&abolition.html">Data Advocacy & Abolition</a></li>
-      <li><a href="otherResources.html">Other Resources</a></li>
-    </ul>
+    <a href="index.html">Home</a>
+    <a class="active" href="policeData.html">Police Data</a>
+    <a href="otherResources.html">Other Resources</a>
+    <div class="dropdown">
+      <button class="dropbtn">Data Advocacy
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="dataAdvocacy.html">Data Advocacy Projects</a>
+        <a href="data&abolition.html">Data Advocacy & Abolition</a>
+      </div>
+    </div>
   </div>
   <div class="container">
     <div class="row top">
       <h1>Police Source Data</h1>
       <p>Introduction to subsection.</p>
-      <p>The police have a lot of data on us, but when it comes to having data on them, the picture is much more fuzzy.</p>
-      <div> <!--Process section-->
+      <p>The police have a lot of data on us, but when it comes to having data on them, the picture is much more
+        fuzzy.</p>
+      <div>
+        <!--Process section-->
         <h2>Process</h2>
         <p>I wanted to do X. The process I took for exploring and finding this information was...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis, arcu vel bibendum semper, justo justo fringilla mi, sed finibus augue lectus vitae leo. Mauris at nulla at ex lacinia sodales sit amet et libero. In eget fermentum nibh, at dignissim odio. Curabitur tincidunt sed felis eu aliquet. Donec pulvinar vitae diam in lacinia. Vivamus consectetur auctor sem, ut consequat diam. Etiam sodales sapien eget lorem dictum, vel laoreet magna ultricies. Sed eros sapien, vestibulum sed hendrerit vel, sodales id mi. In ac risus mi.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis, arcu vel bibendum semper, justo
+          justo fringilla mi, sed finibus augue lectus vitae leo. Mauris at nulla at ex lacinia sodales sit amet et
+          libero. In eget fermentum nibh, at dignissim odio. Curabitur tincidunt sed felis eu aliquet. Donec pulvinar
+          vitae diam in lacinia. Vivamus consectetur auctor sem, ut consequat diam. Etiam sodales sapien eget lorem
+          dictum, vel laoreet magna ultricies. Sed eros sapien, vestibulum sed hendrerit vel, sodales id mi. In ac
+          risus mi.</p>
       </div>
-      <div> <!-- Policy section-->
+      <div>
+        <!-- Policy section-->
         <h2>Policy</h2>
-        <p>1. What data do the police have that should be open to the public? 2. What are the polcies regarding police data and them having to make it accessible?
-      </div> 
-      <div> <!-- Access Data section-->
+        <p>1. What data do the police have that should be open to the public? 2. What are the polcies regarding police
+          data and them having to make it accessible?
+      </div>
+      <div>
+        <!-- Access Data section-->
         <h2>Acquiring Data</h2>
-        <p>3. What is the real world experience of trying to access this data? What troubles are encountered (cost, tie, etc.)? What is the process for acqiring police data and how does it vary state to state?</p>
+        <p>3. What is the real world experience of trying to access this data? What troubles are encountered (cost,
+          tie, etc.)? What is the process for acqiring police data and how does it vary state to state?</p>
         <p>Potential source: the police scorecard</p>
         <div>
           <h3>My Data Acquisition (finding?) Experience</h3>
-          <p>Include details of search and what came up. Or this could be the section where I can talk about ADE project experiences.</p>
+          <p>Include details of search and what came up. Or this could be the section where I can talk about ADE
+            project experiences.</p>
         </div>
       </div>
       <div>
-        <h2>Data Quality</h2> 
-        <p>In addition to policing data being hard to acquire, there are also potential concerns when it comes to the quality of the data. For example, while I was able to find a number of openly available police datasets when searching national government databases, the usefulness of this data is questionable. Many of the datasets contained old or limited timelines of data, despite citing that they were supposed to be updated to the publicly accessible version as often as weekly (CITE 2-3 SPECIFIC DATASETS).</p>
+        <h2>Data Quality</h2>
+        <p>In addition to policing data being hard to acquire, there are also potential concerns when it comes to the
+          quality of the data. For example, while I was able to find a number of openly available police datasets when
+          searching national government databases, the usefulness of this data is questionable. Many of the datasets
+          contained old or limited timelines of data, despite citing that they were supposed to be updated to the
+          publicly accessible version as often as weekly (CITE 2-3 SPECIFIC DATASETS).</p>
         <p>When it comes to </p>
       </div>
     </div>
