Update navbar to match dataprojects page

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="dataAdvocacy.html">Data Advocacy Projects</a>
+        <a href="dataProjects.html">Data Project Spotlight</a>
         <a href="data&abolition.html">Data Advocacy & Abolition</a>
       </div>
     </div>
