Update format and add some draft text to police data

--- a/policeData.html
+++ b/policeData.html
@@ -43,62 +43,62 @@
   <div class="container">
     <div class="row top">
       <h1>Police Source Data</h1>
-      <p>Introduction to subsection.</p>
-      <p>The police have a lot of data on us, but when it comes to having data on them, the picture is much more
-        fuzzy.</p>
+      <p>Police Source Data
+        This page is about answering what I think is the most important question of this project: can data projects get
+        the police source data they need? When I say police source data, I am referring to the raw data that is
+        collected by police departments that ideally, people can access to perform various analyses on. Examples of data
+        projects using various forms of policing data can be seen on the Data Project Spotlight page.
+      </p>
+      <p>Below I outline my process and an overview of the results of my searching experience. But you can also skip
+        straight to the acquiring data section if you would just like to read the raw information on what it is like to
+        obtain this data.</p>
       <div>
         <!--Process section-->
         <h2>Process</h2>
-        <p>I wanted to do X. The process I took for exploring and finding this information was...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis, arcu vel bibendum semper, justo
-          justo fringilla mi, sed finibus augue lectus vitae leo. Mauris at nulla at ex lacinia sodales sit amet et
-          libero. In eget fermentum nibh, at dignissim odio. Curabitur tincidunt sed felis eu aliquet. Donec pulvinar
-          vitae diam in lacinia. Vivamus consectetur auctor sem, ut consequat diam. Etiam sodales sapien eget lorem
-          dictum, vel laoreet magna ultricies. Sed eros sapien, vestibulum sed hendrerit vel, sodales id mi. In ac
-          risus mi.</p>
+        <p>When I went to answer the question of police data accessibility, my goal was to find answers to a few key
+          questions:</p>
+        <ol>
+          <li>What is the policy regarding obtaining policing data? I.e. How should it work in theory according to
+            legislation?</li>
+          <li>What is the real world experience of data projects, and data scientists, when gathering data for data
+            advocacy projects?</li>
+          <li>And, related to the above, what is the quality of the data once (/if) obtained?</li>
+        </ol>
+        <p>These three questions were chosen to help provide a broad overview of what the state of police data
+          accessibility is like. I also believed that answering these questions would cover the most commonly asked
+          questions that I get when I bring up my work using policing data. I don’t have all the answers, even though I
+          do that work, and I wanted to find at least the beginnings of them.</p>
+        <p>For finding answers, I conducted a number of searches to draw on a broad array of potential sources. These
+          sources included database searches for academic papers and articles, data advocacy projects, articles written
+          by data scientists doing this work, legal resources about policy, government databases, and official
+          government websites on legislation and records requests processes. </p>
       </div>
       <div>
-        <!-- Policy section-->
-        <h2>Policy</h2>
-        <p>1. What data do the police have that should be open to the public? 2. What are the polcies regarding police
-          data and them having to make it accessible?
+        <!-- Results in Short-->
+        <h3>Results in Short</h3>
+        <p>I found a number of large data advocacy projects that included insightful information on their records
+          request experiences. This combined with articles written by people doing this work and the exploration of
+          government data portals allowed me to confidently provide perspective on questions #2 and #3.</p>
+        <p>Hoever, I was ultimately unable to find the kinds of information I really desired to answer the questions
+          regarding police data acquisition policy. While I was able to find ample information on federal data processes
+          (under FOIA, more information below), I was unable to find reputable, up-to-date, and applicable sources for
+          the state legislation which covers policing data (often called FOI legislation, varies significantly state to
+          state).</p>
       </div>
-      <div>
-        <!-- Access Data section-->
-        <h2>Acquiring Data</h2>
-        <p>3. What is the real world experience of trying to access this data? What troubles are encountered (cost,
-          tie, etc.)? What is the process for acqiring police data and how does it vary state to state?</p>
-        <p>Potential source: the police scorecard</p>
-        <div>
-          <h3>My Data Acquisition (finding?) Experience</h3>
-          <p>Include details of search and what came up. Or this could be the section where I can talk about ADE
-            project experiences.</p>
+      <div class="row">
+        <h1> References </h1>
+        <ol>
+          <li>source - can also put these on the about page (but maybe store these here for now)</li>
+        </ol>
+      </div>
+      <div class="row">
+        <div class="footer">
+          <ul>
+            <li><a href="about.html">Sources & About</a></li>
+          </ul>
         </div>
       </div>
-      <div>
-        <h2>Data Quality</h2>
-        <p>In addition to policing data being hard to acquire, there are also potential concerns when it comes to the
-          quality of the data. For example, while I was able to find a number of openly available police datasets when
-          searching national government databases, the usefulness of this data is questionable. Many of the datasets
-          contained old or limited timelines of data, despite citing that they were supposed to be updated to the
-          publicly accessible version as often as weekly (CITE 2-3 SPECIFIC DATASETS).</p>
-        <p>When it comes to </p>
-      </div>
     </div>
-    <div class="row">
-      <h1> References </h1>
-      <ol>
-        <li>source - can also put these on the about page (but maybe store these here for now)</li>
-      </ol>
-    </div>
-    <div class="row">
-      <div class="footer">
-        <ul>
-          <li><a href="about.html">Sources & About</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
