Import more font weights, css to fix header style

--- a/dataProjects.html
+++ b/dataProjects.html
@@ -9,13 +9,14 @@
   <meta name="description"
     content="Accessibility and limitations of policing data in the US and the implications this has on abolitionist movements.">
   <meta name="author" content="Maeve Stites">
-
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/2a97e054bf.js" crossorigin="anonymous"></script>
 </head>
 
@@ -45,54 +46,80 @@
       <h1>Data Project Spotlight</h1>
       <p>Examples of a few different data projects. Selected some different types to share to try to reflect my general
         findings in my search.</p>
-      </p>Many of these projects were framed as "police accountability" in some way shape or form. Some very directly.
-      At first, I was very thrown off by this, it seems very reformist. But for some of the projects, it does seem like
-      it could be a method of getting the data, as they brand themselves in a way to say "hey police departments work
-      with me". But at the end of the day, when you look at the reports from these data projects, they at least provide
-      some quantification of the racism and violence that police departments are doing in their communities. They still
-      tell a story, and that can have value. However, there certainly is also a sort of gaslightly (irony?) approach of
-      pretending that there is an accountability possibility while also reporting that police are racial profiling at
-      extreme levels and reporting high incidents of violence over sometimes long periods of time <- this section would
-        need to be re-written </p>
-        <div>
-          <!-- Policing Data Projects -->
-          <h2>Policing Data Projects</h2>
-          <p>Projects relating to our primary topic: policing data. Note: will eventually turn these into images and
-            prettier. Also may cut down on the list of projects. Projects:</p>
-          <ol>
-            <li><a href=https://policescorecard.org/findings> Police Scorecard</a></li>
-            <li><a href=https://policingequity.org/>Center for Policing Equity</a></li>
-            <li><a href=https://justicenavigator.org/#home-assessments>Justice Navigator</a> Works with the police, may be a good example for this reason, or could be good to leave out too.</li>
-            <li><a href=https://mappingpoliceviolence.org/>Mapping Police VIolence</a> -> Visual impact, telling a story</li>
-          </ol>
-        </div>
-        <div>
-          <h2>Other Data Projects</h2>
-          <p>While the focus of my project is on policing data, I found some other data projects in my search that I
-            wanted to share. I believe these are important context, as non-policing data can be in many cases easier to
-            acquire (can remove likely, as I don't think I will have source for this - though for COVID I may).</p>
-          <p>It is important context because: I wanted to give some non-policing examples so you may have broader ideas
-            of
-            potential for data advocacy, particularly when discussing critiques (on other page); there is potential for
-            less risk and thus potentially more possibilites when working on other forms of data projects, as it can be
-            data less directly controlled by policing agencies (as policing data is recorded police themselves); </p>
-          <ol>
-            <li><a href=https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2782809> Association Between
-                Prison Crowding and COVID-19 Incidence Rates in Massachusetts Prisons, April 2020-January 2021 | Public
-                Health | JAMA Internal Medicine | JAMA Network</a> -> data from publicly available sources. Data can be
-              downloaded from teh ACLU of MA link below (they compiled the data from each week, and the data from the
-              seperate sources - should probably mention sources), and seen in their data project below.</li>
-            <li><a href=https://data.aclum.org/sjc-12926-tracker /> ACLU Tracking COVID-19 Iin MA Prisons & Jails</li>
-          </ol>
-        </div>
+      <p>Many of these projects were framed as "police accountability" in some way shape or form. Some very directly.
+        At first, I was very thrown off by this, it seems very reformist. But for some of the projects, it does seem
+        like
+        it could be a method of getting the data, as they brand themselves in a way to say "hey police departments work
+        with me". But at the end of the day, when you look at the reports from these data projects, they at least
+        provide
+        some quantification of the racism and violence that police departments are doing in their communities. They
+        still
+        tell a story, and that can have value. However, there certainly is also a sort of gaslightly (irony?) approach
+        of
+        pretending that there is an accountability possibility while also reporting that police are racial profiling at
+        extreme levels and reporting high incidents of violence over sometimes long periods of time - this section
+        would need to be re-written </p>
     </div>
     <div class="row">
-      <div class="footer">
-        <ul>
-          <li><a href="about.html">Sources & About</a></li>
-        </ul>
+      <!-- Policing Data Projects -->
+      <h2>Policing Data Projects</h2>
+      <h3> Header 3</h3>
+      <h4> Header 4</h4>
+      <div class="project">
+        <h3>Mapping Police Violence</h3>
+        <img src="assets/img/spotlight/mappingPoliceViolence/map.jpg">
+        <p class="figcaption">Description</p>
       </div>
+      <p>Projects relating to our primary topic: policing data. Note: will eventually turn these into images and
+        prettier. Also may cut down on the list of projects. Projects:</p>
+      <ol>
+        <li><a href=https://policescorecard.org/findings> Police Scorecard</a></li>
+        <li><a href=https://policingequity.org />Center for Policing Equity</a></li>
+        <li><a href=https://justicenavigator.org/#home-assessments>Justice Navigator</a> Works with the police,
+          may
+          be a good example for this reason, or could be good to leave out too.</li>
+        <li><a href=https://mappingpoliceviolence.org />Mapping Police VIolence</a> -> Visual impact, telling a
+          story</li>
+      </ol>
     </div>
+    <div class="row">
+      <h2>Other Data Projects</h2>
+      <p>While the focus of my project is on policing data, I found some other data projects in my search that I
+        wanted to share. I believe these are important context, as non-policing data can be in many cases easier
+        to
+        acquire (can remove likely, as I don't think I will have source for this - though for COVID I may).</p>
+      <p>It is important context because: I wanted to give some non-policing examples so you may have broader
+        ideas
+        of
+        potential for data advocacy, particularly when discussing critiques (on other page); there is potential
+        for
+        less risk and thus potentially more possibilites when working on other forms of data projects, as it can
+        be
+        data less directly controlled by policing agencies (as policing data is recorded police themselves);
+      </p>
+      <ol>
+        <li><a href=https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/2782809> Association
+            Between
+            Prison Crowding and COVID-19 Incidence Rates in Massachusetts Prisons, April 2020-January 2021 |
+            Public
+            Health | JAMA Internal Medicine | JAMA Network</a> -> data from publicly available sources. Data can
+          be
+          downloaded from teh ACLU of MA link below (they compiled the data from each week, and the data from
+          the
+          seperate sources - should probably mention sources), and seen in their data project below.</li>
+        <li><a href=https://data.aclum.org/sjc-12926-tracker /> ACLU Tracking COVID-19 Iin MA Prisons & Jails
+        </li>
+      </ol>
+    </div>
+  </div>
+  </div>
+  <div class="row">
+    <div class="footer">
+      <ul>
+        <li><a href="about.html">Sources & About</a></li>
+      </ul>
+    </div>
+  </div>
   </div>
 </body>
 
