Create project view style

--- a/dataProjects.html
+++ b/dataProjects.html
@@ -67,7 +67,7 @@
       <h4> Header 4</h4>
       <div class="project">
         <h3>Mapping Police Violence</h3>
-        <img src="assets/img/spotlight/mappingPoliceViolence/map.jpg">
+        <img class="project" src="assets/img/spotlight/mappingPoliceViolence/map.jpg">
         <p class="figcaption">Description</p>
       </div>
       <p>Projects relating to our primary topic: policing data. Note: will eventually turn these into images and
